# ggm

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CodingStandards.md  LICENSE  README.md
include/ggm/: ConstantsUtil.h  Matrix.h  MatrixAll.h  MatrixTypedefs.h  MatrixUtil.h  NumericAll.h  NumericUtil.h  Vector.h  VectorAll.h  VectorConstants.h  VectorTypedefs.h  VectorUtil.h  ggm.h
include/ggm/Matrix/: Matrix.h  MatrixConstants.h  MatrixFwd.h  MatrixRotation.h  MatrixRotationConstants.h  MatrixRotationFwd.h  MatrixRotationTypedefs.h  MatrixRotationUtil.h  MatrixTransform.h  MatrixTransformConstants.h  MatrixTransformFwd.h  MatrixTransformTypedefs.h  MatrixTransformUtil.h  MatrixTypedefs.h  MatrixUtil.h  MatrixVectorUtil.h
include/ggm/Numeric/: NumericConstants.h  NumericUtil.h
include/ggm/Transform/: MatrixTransformConstants.h  MatrixTransformFwd.h  MatrixTransformTypedefs.h  MatrixTransformUtil.h  Transform.h  TransformConstants.h  TransformFwd.h  TransformTypedefs.h  TransformUtil.h
include/ggm/Vector/: VectorConstants.h  VectorFwd.h  VectorTypedefs.h  VectorUtil.h
source/ggm/: NumericUtil.cpp
tests/: TestMatrix.cpp  TestMatrixConstants.cpp  TestMatrixRotationUtil.cpp  TestMatrixTransform.cpp  TestMatrixTransformUtil.cpp  TestMatrixUtil.cpp  TestMatrixVectorUtil.cpp  TestNumericConstants.cpp  TestNumericUtil.cpp  TestTransform.cpp  TestTransformUtil.cpp  TestVector.cpp  TestVectorConstants.cpp  TestVectorUtil.cpp
tests/TestUtils/: Types.h
